# RFC8879

./: .gitignore  CMakeLists.txt  README.md  run_local_test.ps1
docs/: RFC8879_openHiTLS_implementation_plan.md  openhitls_integration_readiness.md
include/: hitls_cert_compress.h
src/: hitls_cert_compress.c
tests/: run_local_test.bat  run_local_test.ps1  run_local_test.sh  test_hitls_cert_compress.c  test_plan_rfc8879.md
